namespaces/live-1.cloud-platform.service.justice.gov.uk/opa/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opa
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "OPA"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-infrastructure"
